--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,7 @@
     --text-color:#333;
     --border-color:#dbdbdb;
     --primary-color: #EE4D2D;
+    --star-gold-color: #FFCE3E;
     --navbar-height:34px;
     --header-height:120px;
     --header-with-search-height:calc( var(--header-height) - var(--navbar-height))  
@@ -17,6 +18,7 @@ html{
     font-family: 'Roboto', sans-serif;
     box-sizing:border-box;
 }
+/* responsive */
 .grid{
     width:1200px ;
     max-width: 100%;
@@ -28,6 +30,23 @@ html{
 .grid__row{
     display: flex;
     flex-wrap: wrap;
+    margin-left: -5px;
+    margin-right: -5px;
+}
+.grid__column-2{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 16.67%;
+}
+.grid__column-10{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 83.33%;
+}
+.grid__column-2-4{
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 20%;
 }
 /* animation */
 @keyframes fadeIn{
@@ -87,6 +106,7 @@ html{
     justify-content: center;
     align-items: center;
     line-height: 1.6rem;
+    background-color: var(--white-color);
 }
 .btn.btn--primary{
     background-color: var(--primary-color);
@@ -107,3 +127,79 @@ html{
     margin-left: 12px;
 }
 
+/* ::select */
+.select-input{
+    position: relative;
+    min-width: 200px;
+    height: 34px;
+    padding: 0 12px;
+    border-radius: 2px;
+    background-color: var(--white-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.select-input:hover .select-input__list{
+    display: block;
+}
+.select-input__label{
+    font-size: 1.6rem;
+    color:var(--text-color);
+}
+.select-input__icon{
+    font-size: 1.4rem;
+    position: relative;
+    top:1px;
+}
+.select-input__list{
+    position: absolute;
+    left: 0;
+    top: 25px;
+    background-color: var(--white-color);
+    width: 100%;
+    list-style: none;
+    padding:0 12px;
+    display: none;
+    border-radius: 2px;
+    z-index: 1;
+    
+}
+.select-input__link{
+    font-size: 1.4rem;
+    color: var(--text-color);
+    text-decoration: none;
+    display: block;
+    padding: 4px 0;
+}
+.select-input__link:hover{
+    color:var(--primary-color);
+}
+
+/* pagination */
+.pagination{
+    display: flex;
+    list-style: none;
+    justify-content: center;
+}
+.pagination-item{
+    margin: 0 12px;
+}
+.pagination-item__link{
+    display: block;
+    text-decoration: none;
+    font-size: 2rem;
+    color: #939393;
+    min-width: 40px;
+    height: 30px;
+    text-align: center;
+    line-height: 30px;
+    border-radius: 2px;
+    font-weight: 300;
+}
+.pagination-item--active .pagination-item__link{
+    background-color: var(--primary-color);
+    color:var(--white-color);
+}
+.pagination-item--active .pagination-item__link:hover{
+    filter: brightness(90%); 
+}
