--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,6 +72,8 @@
     border-radius: 2px;
     display: none;
     animation: fadeIn ease-in 0.5s;
+    z-index: 1;
+    box-shadow: 0 1px 2px rgba(0 , 0, 0, 0.1);
 }
 .header__qr::before {
     content: "";
@@ -430,6 +432,9 @@
     padding: 0 20px;
     border-radius: 3px;
 }
+.header__search-input:focus ~ .header__search-history{
+    display: block;
+}
 .header__search-select{
     border-left: 1px solid #cccc;
     padding-left: 16px;
@@ -584,6 +589,8 @@
     animation: growth ease-in .3s;
     will-change: opacity,transform;
     display: none;
+    z-index: 1;
+    box-shadow: 0 1px  3.125rem 0 rgba(0, 0, 0, 0.2);
 }
 .header__cart-list::after{
     content: "";
@@ -621,8 +628,8 @@
     font-weight: 400;
 }
 .header__cart-view-cart{
-    position: absolute;
-    right: 0;
+    float: right;
+    margin:0 12px 0 0 ;
 }
 /* item in cart */
 .header__cart-list-item{
@@ -651,9 +658,19 @@
     justify-content: space-between;
 }
 .header__cart-item-name{
-  margin:0px;
-  font-size: 1.4rem;
-  font-weight: 400;
+    font-weight: 500;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    margin: 0;
+    max-height: 2rem;
+    height: 4rem;
+    overflow: hidden;
+    flex: 1;
+    padding-right: 16px;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    text-align: left;
 }
 .header__cart-item-price-wrap{
     margin-right: 10px;
@@ -682,8 +699,357 @@
     color: var(--primary-color);
     cursor: pointer;
 }
-.container{
-    background-color: lightcoral;
-    width: 100%;
-    height: 100%;
+/* container */
+
+.app__container{
+    background-color: #f5f5f5;
+}
+.category{
+    background-color: var(--white-color);
+    border-radius: 2px;
+}
+.category__heading{
+    font-size: 1.5rem;
+    color: var(--text-color);
+    padding: 16px 16px 0;
+    margin-top: 0;
+    text-transform: uppercase;
+    font-weight: 500;
+    border-bottom:1px solid var(--border-color);
+}
+.category__heading-icon{
+    font-size: 1.4rem;
+    margin-right: 4px;
+}
+.category-list{
+    padding-left: 0px;
+    padding:0 0 8px 0;
+}
+.category-item{
+  
+    list-style: none;
+}
+.category-item__link{
+    position: relative;
+    text-decoration:none;
+    color:var(--text-color);
+    font-size: 1.4rem;
+    padding: 4px 16px;
+    display: block;
+    font-weight: 400;
+    transition: right linear 0.1s;
+    right: 0;
+}
+.category-item--active .category-item__link{
+    color: var(--primary-color);
+    right: -4px;
+}
+.category-item--active .category-item__link::before{
+    position: absolute;
+    border:4px solid;
+    top: 50%;
+    left: 4px;
+    content: " ";
+    transform: translateY(-50%);
+    border-color: transparent transparent transparent var(--primary-color);
+}
+.category-item__link:hover{
+    color: var(--primary-color);
+    right: -4px;
+}
+.app__content{
+    padding-top: 36px;
+}
+
+.home-filter{
+    background-color: rgba(0,0,0, 0.04);
+    display: flex;
+    padding:12px 22px;
+    align-items: center;
+    border-radius: 2px;
+    /* justify-content: space-around;    */
+}
+.home-filter__label{
+    font-size: 1.6rem;
+    color: #555;
+    margin-right: 16px;
+}
+.home-filter__btn{
+    min-width: 90px;
+    margin-right: 12px;
+}
+.home-filter__page{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+.home-filter__page-num{
+    font-size: 1.4rem;
+    color:var(--text-color);
+    margin-right: 12px;
+}
+.home-filter__page-current{
+    color: var(--primary-color);
+}
+.home-filter__page-control{
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+}
+.home-filter__page-btn{
+    display: flex;
+    width: 36px;
+    height: 3.6rem;
+    background-color:var(--white-color);
+    text-decoration: none;
+    border-radius: 2px;
+}
+.home-filter__page-icon{
+    margin: auto;
+    font-size: 1.5rem;
+    color:var(--text-color);
+}
+.home-filter__page-btn:first-child {
+    border-right: 1px solid #eee;
+}
+
+.home-filter__page-btn--disabled{
+    background-color: #f9f9f9;
+}
+/* home product item  */
+.home-product{
+    margin-bottom: 10px;
+}
+.home-product-item{
+    cursor: pointer;
+    background-color: var(--white-color);
+    position: relative;
+    margin-top: 10px;
+    border-bottom-left-radius: 2px;
+    border-top-left-radius: 2px;
+    box-shadow: 0 1px 2px 0 rgba(0 , 0, 0, 0.1);
+    transition: transform ease-in 0.1s;
+    will-change: transform;
+    display: block;
+    text-decoration: none;
+    
+}
+.home-product-item:hover{
+    transform:translateY(-2px);
+    box-shadow: 0 1px 20px 0 rgba(0 , 0, 0, 0.05);
+}
+.home-product-item__img{
+    padding-bottom:100%;
+    background-repeat: no-repeat;
+    background-size:contain;
+    background-position:center;
+}
+.home-product-item__name{
+    font-size:1.4rem;
+    font-weight: 400;
+    color:var(--text-color);
+    line-height: 1.8rem;
+    margin: 10px 10px 4px 10px;
+    height: 36px;
+    overflow: hidden;
+    /* display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; */
+    text-overflow: ellipsis;
+}
+.home-product-item__price{
+    display: flex;
+    align-items: baseline;
+    flex-wrap:wrap;
+}
+.home-product-item__price-old{
+    margin-left: 10px;
+    font-size: 1.4rem;
+    color: #666;
+    text-decoration: line-through;
+
+}
+.home-product-item__price-current{
+    font-size: 1.6rem;
+    color:var(--primary-color);
+    margin-left: 10px;
+}
+.home-product-item__action{
+    display: flex;
+    /* justify-content: space-between; */
+    margin:0 10px;
+}
+.home-product-item__like{
+    font-size: 1.4rem;
+    cursor: pointer;
+
+}
+.home-product-item__liked .home-product-item__like-icon-fill {
+    display: inline-block;
+}
+.home-product-item__liked .home-product-item__like-icon-empty {
+    display: none;
+}
+.home-product-item__like-icon-fill{
+    color: #F63D30;
+    display: none;
+}
+.home-product-item__like-icon-empty{
+    display: inline-block;
+}
+.home-product-item__rating {
+    font-size: 1rem;
+    transform: scale(0.8);
+    transform-origin: right;
+    color: #D5D5D5;
+    margin: -1px 0 0 auto;
+}
+.home-product-item__star--gold{
+    color: var(--star-gold-color);
+}
+.home-product-item__solded {
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-left: 6px;
+}
+.home-product-item__origin{
+    display: flex;
+    margin: 0 10px;
+    font-size: 1.2rem;
+    color:#595959; 
+    font-weight: 400;
+}
+.home-product-item__brand{
+    margin-right: auto;
+
+}
+.home-product-item__favourite{
+    position: absolute;
+    top: 10px;
+    left: -4px;
+    color:  var(--primary-color);
+    background-color:currentColor;
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 1.6rem;
+    padding-right: 4px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+  
+}
+.home-product-item__favourite::before{
+    content: " ";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    border-top: 4px solid currentColor;
+    border-left: 4px solid transparent;
+    filter: brightness(0.7);
+
+}
+.home-product-item__favourite span{
+    color:  var(--white-color);
+}
+.home-product-item__favourite i {
+    color:  var(--white-color);}
+    
+/* .home-product-item__favourite-label{
+    color:  var(---white-color);
+    font-size: 0.9rem;
+    margin: 0 2px 0 5px;
+} */
+.home-product-item__sale-off{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 40px;
+    height: 36px;
+    background-color: rgba(255, 216, 64, 0.94);
+    text-align: center;
+    border-top-right-radius: 2px;
+}
+.home-product-item__percent{
+    color: #EE4D2D;
+    font-weight: 600;
+    font-size: 1.3rem;
+    line-height: 2.2rem;
+    position: relative;
+}
+.home-product-item__sale-off-reduction{
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 1.4rem;
+    color: var(--white-color);
+    position: relative;
+    top: -5px;
+}
+.home-product-item__sale-off::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    border-width: 0 20px 4px;
+    border-style: solid;    
+    border-color: transparent rgba(255, 216, 64, 0.94) transparent rgba(255, 216, 64, 0.94);
+
+}
+.footer{
+    border-top:4px solid var(--primary-color);
+    padding-top: 12px;
+    background-color: var(--white-color);
+
+}
+.footer-list{
+    list-style: none;
+    padding:0;
+
+}
+
+.footer__download{
+    display: flex;
+}
+.footer__dowload-qr{
+    width: 80px;
+    height: 80px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
+.footer__dowload{
+    height: 16px;
+}
+.footer-download__App{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 16px;
+}
+.footer-item__link {
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: #737373;
+    padding: 2px 0;
+    display: block;
+    display: flex;
+    align-items: center;
+}
+.footer__item-icon {
+    font-size: 1.6rem;
+    margin: -1px 8px 0 0;
+}
+
+.footer-item__link:hover{
+    color:var(--primary-color);
+}
+.footer__bottom{
+    background-color: #F5F5F5;
+    padding: 8px 0;
+    margin-top: 32px;
+}
+.footer__text{
+    margin: 0;
+    font-size: 1.2rem;
+    text-align: center;
+    color: #737373;
+
 }
