--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,6 @@
+.app{
+    overflow: hidden;
+}
 .header{
     height: var(--header-height);
     background-image: linear-gradient(0,#fe6433,#f53e2d);
@@ -377,6 +380,7 @@
     height: var(--header-with-search-height);
     display: flex;
     align-items: center;
+    margin: 0 12px;
 }
 .header__logo{
     width: 200px;
@@ -481,6 +485,12 @@
     color: var(--white-color);
     font-size: 1.6rem;
 }
+.header__search-checkbox-icon {
+    color: var(--white-color);
+    font-size: 2.4rem;
+    display: none;
+}
+
 .header__search-option{
     position: absolute;
     right: 0;
@@ -539,7 +549,7 @@
     box-shadow: 0 1px 5px rgb(197, 197, 197);
     display: none;
     overflow: hidden;
-    z-index: 1;
+    z-index: 2;
 }
 .header__search-history-heading{
     margin: 0px ;
@@ -629,7 +639,7 @@
 }
 .header__cart-view-cart{
     float: right;
-    margin:0 12px 0 0 ;
+    margin:0 12px 10px 0 ;
 }
 /* item in cart */
 .header__cart-list-item{
@@ -699,8 +709,48 @@
     color: var(--primary-color);
     cursor: pointer;
 }
-/* container */
 
+/* header sort bar */
+.header__sort-bar{
+    position: fixed;
+    top: var(--header-height);
+    left: 0;
+    right: 0;
+    height: var(--header-sort-bar-height);
+    background-color: var(--white-color);
+    margin: 0;
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
+    display: none;
+
+}
+.header__sort-item{
+    flex: 1;
+}
+.header__sort-link{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.4rem;
+    display: block;
+    height: 100%;
+    line-height: var(--header-sort-bar-height);
+    text-align: center;
+    position: relative;
+
+}
+.header__sort-link::before {
+    content: "";
+    left: 0;
+    position: absolute;
+    top: 50%;
+    height: 100%;
+    border-left: 1px solid #e5e5e5;
+    transform: translateY(-50%);
+}
+/* container */
 .app__container{
     background-color: #f5f5f5;
 }
@@ -758,7 +808,7 @@
     right: -4px;
 }
 .app__content{
-    padding-top: 36px;
+    padding-top: 8px;
 }
 
 .home-filter{
@@ -815,6 +865,53 @@
 
 .home-filter__page-btn--disabled{
     background-color: #f9f9f9;
+}
+/* mobile category */
+.mobile-category{
+ display: none;
+}
+.mobile-category__list{
+    display: flex;
+    overflow-x: auto;
+    max-width: 100%;
+    list-style: none;
+}
+.mobile-category__item{
+    flex-shrink: 0;
+    margin-right: 10px;
+}
+.mobile-category__item:nth-last-of-type(3n) .mobile-category__link{
+    background-color: rgb(135,175,216);
+}
+.mobile-category__item:nth-last-of-type(3n+1) .mobile-category__link{
+    background-color: rgb(118,201,189);
+}
+.mobile-category__item:nth-last-of-type(3n+2) .mobile-category__link{
+    background-color: rgb(136,207,49);
+}
+.mobile-category__link{
+    --line-height: 2rem;
+    text-decoration: none;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    line-height:2rem;
+    text-align: center;
+    width: 110px;
+    height: calc(var(--line-height) * 2);
+    display: block;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    border-radius: 4px;
+    font-weight: 300;
+    overflow: hidden;
+    user-select: none;
+    -webkit-user-select: none;
+    padding: 0 6px;
+
+}
+.mobile-category__list::-webkit-scrollbar{
+    display: none;
 }
 /* home product item  */
 .home-product{
@@ -1017,7 +1114,7 @@
 .footer__dowload{
     height: 16px;
 }
-.footer-download__App{
+.footer__download-apps{
     flex:1;
     display: flex;
     flex-direction: column;
